Exercises_K8S/01_caramelo_libraryapi/Kubernetes/02_redis.yml
# Cache Redis

apiVersion: v1
kind: Service
metadata:
  namespace: library-api
  name: redis-service
  labels:
    app: redis-deployment
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: library-api
  name: redis-deployment
  labels:
    app: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      containers:
        - name: master
          image: redis:alpine
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /data/redis
          ports:
            - containerPort: 6379
      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
            claimName: redis-pvclaim
