Exercises_K8S/01_caramelo_libraryapi/Kubernetes/app.yml
# App

apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-deployment
spec:
  type: NodePort
  ports:
    - port: 9000
      protocol: TCP
      nodePort: 30080
  selector:
    app: app-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-deployment
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
        - name: app-deployment
          image: rafahcsilva/k8s_libraryapi-app:1.1.0
          command: [ "php-fpm" ]
          ports:
            - containerPort: 80
