Exercises_K8S/01_caramelo_libraryapi/Kubernetes/nginx.yml
# WebServer Nginx

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-deployment
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          command: ["nginx", "-g", "daemon off;"]
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: configmap-volume
            - mountPath: /var/www/html/public
              name: indexmap-volume
      volumes:
        - name: configmap-volume
          configMap:
            name: nginxconf-map
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: indexmap-volume
          configMap:
            name: nginxindex-map
            items:
              - key: index.php
                path: index.php
