Exercises_K8S/01_caramelo_libraryapi/Kubernetes/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis-deployment
spec:
  ports:
    - port: 6379
      protocol: TCP
  selector:
    app: redis-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      containers:
        - name: master
          image: redis:alpine
