Exercises_K8S/01_caramelo_libraryapi/Kubernetes/webapp.yml
# App(PHP) and Nginx in same POD

apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app: webapp-deployment
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: webapp-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-deployment
  template:
    metadata:
      labels:
        app: webapp-deployment
    spec:
      containers:
        - name: webapp-php-container
          image: rafahcsilva/k8s_libraryapi-app:1.1.0
          command: [ "php-fpm" ]
          ports:
            - containerPort: 80
        - name: webapp-nginx-container
          image: nginx:1.14.2
          command: ["nginx", "-g", "daemon off;"]
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: webapp-configmap-volume
            - mountPath: /var/www/html/public
              name: webapp-indexmap-volume
      volumes:
        - name: webapp-configmap-volume
          configMap:
            name: webapp-nginxconf-map
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: webapp-indexmap-volume
          configMap:
            name: webapp-nginxindex-map
            items:
              - key: index.php
                path: index.php
