Exercises_K8S/01_caramelo_libraryapi/Kubernetes/webapp-ingress.yml
# Ingress for webapp-service in URL http://libraryapi.test

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - host: libraryapi.test
      http:
        paths:
          - backend:
              serviceName: webapp-service
              servicePort: 80
